# bonelabmodinstaller

./: .gitignore  README.md  desktop_launcher.py
backend/: __main__.py  install_manager.py  main.py  pyproject.toml  state_manager.py  thunderstore.py
frontend/: app.js  index.html  styles.css
