[tool.poetry]
name = "bonelabmodinstaller-backend"
version = "0.1.0"
description = "Backend service for BONELAB Mod Manager"
authors = ["AutoDev <autodev@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
requests = "^2.31.0"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
